--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "serve": "^10.0.2",
     "uuid": "^3.3.2"
   },
   "scripts": {
